tests/expectations/compiler/records/init_expression_type_fail.out
DCE_ENABLED:
Error [ETYC0372057]: Only `transition` functions can have a record as input or output.
    --> compiler-test:10:44
     |
  10 |     function mint(r0: address, r1: u64) -> Token {
     |                                            ^^^^^
Error [ETYC0372117]: Expected type `address` but type `u64` was found.
    --> compiler-test:12:20
     |
  12 |             owner: r1, // This variable should be type address.
     |                    ^^
Error [ETYC0372117]: Expected type `u64` but type `address` was found.
    --> compiler-test:13:21
     |
  13 |             amount: r0, // This variable should be type u64.
     |                     ^^
Error [ETYC0372042]: Only `inline` can be called from a `function` or `inline`.
    --> compiler-test:19:24
     |
  19 |         let t: Token = mint(x, c);
     |                        ^^^^^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | program test.aleo {
     | ^^^^^^^^^^^^

DCE_DISABLED:
Error [ETYC0372057]: Only `transition` functions can have a record as input or output.
    --> compiler-test:10:44
     |
  10 |     function mint(r0: address, r1: u64) -> Token {
     |                                            ^^^^^
Error [ETYC0372117]: Expected type `address` but type `u64` was found.
    --> compiler-test:12:20
     |
  12 |             owner: r1, // This variable should be type address.
     |                    ^^
Error [ETYC0372117]: Expected type `u64` but type `address` was found.
    --> compiler-test:13:21
     |
  13 |             amount: r0, // This variable should be type u64.
     |                     ^^
Error [ETYC0372042]: Only `inline` can be called from a `function` or `inline`.
    --> compiler-test:19:24
     |
  19 |         let t: Token = mint(x, c);
     |                        ^^^^^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | program test.aleo {
     | ^^^^^^^^^^^^
